--- a/index.html
+++ b/index.html
@@ -3,39 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>staple.</title>
+    <title>fin</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
+        #gif {
+            display: none;
+            cursor: pointer;
+            margin-top: 20px;
         }
-
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 10px;
-            padding: 10px;
-            max-width: 1200px;
-            margin: auto;
-        }
-
-        .gallery img {
-            width: 100%;
-            height: auto;
-            display: block;
-            border-radius: 8px;
+        #additionalImage {
+            margin-top: 20px;
+            width: 200px;
         }
     </style>
 </head>
 <body>
-    <div class="gallery">
-        <img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r"><img src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="d00r">
+    <input type="text" id="inputField" placeholder="Press Enter">
+    <img id="additionalImage" src="https://i.imgur.com/kko6ZJe.png" alt="Additional Image">
+    <img id="gif" src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="Animated GIF">
 
-    </div>
+    <script>
+        const inputField = document.getElementById('inputField');
+        const gif = document.getElementById('gif');
+        const additionalImage = document.getElementById('additionalImage');
+        
+        inputField.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                const inputValue = inputField.value.trim().toLowerCase();
+                
+                if (inputValue === 'f7') {
+                    gif.style.display = 'block';
+                } else if (inputValue === 'g') {
+                    document.body.innerHTML = '<p>solved. check back again l8r!</p>';
+                } else {
+                    gif.style.display = 'none';
+                }
+            }
+        });
+
+        gif.addEventListener('click', function() {
+            alert('youtube AsJTAV6Z6YQ');
+        });
+    </script>
 </body>
 </html>
