--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <input type="text" id="inputField" placeholder="Press Enter">
-    <img id="additionalImage" src="https://i.imgur.com/kko6ZJe.png" alt="Additional Image">
+    <img id="additionalImage" src="https://i.imgur.com/BHCu2V1.png" alt="Additional Image">
     <img id="gif" src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="Animated GIF">
 
     <script>
