--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </style>
 </head>
 <body>
-    <input type="text" id="inputField" placeholder="Press Enter">
-    <img id="additionalImage" src="https://i.imgur.com/BHCu2V1.png" alt="Additional Image">
+    <input type="text" id="inputField" placeholder="Press">
+    <img id="additionalImage" src="https://i.imgur.com/vte428O.png" alt="Additional Image">
     <img id="gif" src="https://cdn.dribbble.com/users/3357909/screenshots/14323488/media/d1691be9c8997c49d8fb62f9bed5ec13.gif" alt="Animated GIF">
 
     <script>
@@ -30,7 +30,7 @@
             if (event.key === 'Enter') {
                 const inputValue = inputField.value.trim().toLowerCase();
                 
-                if (inputValue === 'f7') {
+                if (inputValue === 'cheese') {
                     gif.style.display = 'block';
                 } else if (inputValue === 'g') {
                     document.body.innerHTML = '<p>solved. check back again l8r!</p>';
